# SBHacks2022

./: .gitignore  README.md  package-lock.json  pyproject.toml  wsgi.py
backend/: assembly.py
frontend/: package-lock.json  package.json
frontend/dragndrop/: Dragdrop.js  dragdrop.css
frontend/home1/: Home.js
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/Home/: index.js
frontend/src/Player/: dummy.json  index.js  player.css
frontend/src/home1/: home.css
src/: __init__.py  api.py  assembly.py  dummyResponse.json  index.html  routes.py
src/dummyResponses/cs130b/: dummycompleted.json  dummyprocessing.json  dummyqueued.json  id_url.txt
src/dummyResponses/cs165a/: dummycompleted.json  dummyprocessing.json  dummyqueued.json  id_url.txt
src/dummyResponses/ece153b/: dummycompleted.json  dummyprocessing.json  dummyqueued.json  id_url.txt
src/dummyResponses/fft/: dummycompleted.json  dummyprocessing.json  dummyqueued.json  id_url.txt  timer.pkl
src/dummyResponses/small/: dummyprocessing.json  dummyqueued.json  id_url.txt
