[tool.poetry]
name = "sbhacks2022"
version = "0.1.0"
description = ""
authors = ["ThisKappaIsGrey <thanatechaumnuaiwit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
